err/zendesk-help-center-backer.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/argh'...
Listing './lib/python3.5/site-packages/argh-0.26.2.dist-info'...
Listing './lib/python3.5/site-packages/boto'...
Listing './lib/python3.5/site-packages/boto/awslambda'...
Listing './lib/python3.5/site-packages/boto/beanstalk'...
Listing './lib/python3.5/site-packages/boto/cacerts'...
Listing './lib/python3.5/site-packages/boto/cloudformation'...
Listing './lib/python3.5/site-packages/boto/cloudfront'...
Listing './lib/python3.5/site-packages/boto/cloudhsm'...
Listing './lib/python3.5/site-packages/boto/cloudsearch'...
Listing './lib/python3.5/site-packages/boto/cloudsearch2'...
Listing './lib/python3.5/site-packages/boto/cloudsearchdomain'...
Listing './lib/python3.5/site-packages/boto/cloudtrail'...
Listing './lib/python3.5/site-packages/boto/codedeploy'...
Listing './lib/python3.5/site-packages/boto/cognito'...
Listing './lib/python3.5/site-packages/boto/cognito/identity'...
Listing './lib/python3.5/site-packages/boto/cognito/sync'...
Listing './lib/python3.5/site-packages/boto/configservice'...
Listing './lib/python3.5/site-packages/boto/contrib'...
Listing './lib/python3.5/site-packages/boto/datapipeline'...
Listing './lib/python3.5/site-packages/boto/directconnect'...
Listing './lib/python3.5/site-packages/boto/dynamodb'...
Listing './lib/python3.5/site-packages/boto/dynamodb2'...
Listing './lib/python3.5/site-packages/boto/ec2'...
Listing './lib/python3.5/site-packages/boto/ec2/autoscale'...
Listing './lib/python3.5/site-packages/boto/ec2/cloudwatch'...
Listing './lib/python3.5/site-packages/boto/ec2/elb'...
Listing './lib/python3.5/site-packages/boto/ec2containerservice'...
Listing './lib/python3.5/site-packages/boto/ecs'...
Listing './lib/python3.5/site-packages/boto/elasticache'...
Listing './lib/python3.5/site-packages/boto/elastictranscoder'...
Listing './lib/python3.5/site-packages/boto/emr'...
Listing './lib/python3.5/site-packages/boto/file'...
Listing './lib/python3.5/site-packages/boto/fps'...
Listing './lib/python3.5/site-packages/boto/glacier'...
Listing './lib/python3.5/site-packages/boto/gs'...
Listing './lib/python3.5/site-packages/boto/iam'...
Listing './lib/python3.5/site-packages/boto/kinesis'...
Listing './lib/python3.5/site-packages/boto/kms'...
Listing './lib/python3.5/site-packages/boto/logs'...
Listing './lib/python3.5/site-packages/boto/machinelearning'...
Listing './lib/python3.5/site-packages/boto/manage'...
Listing './lib/python3.5/site-packages/boto/mashups'...
Listing './lib/python3.5/site-packages/boto/mturk'...
Listing './lib/python3.5/site-packages/boto/mws'...
Listing './lib/python3.5/site-packages/boto/opsworks'...
Listing './lib/python3.5/site-packages/boto/pyami'...
Listing './lib/python3.5/site-packages/boto/pyami/installers'...
Listing './lib/python3.5/site-packages/boto/pyami/installers/ubuntu'...
Listing './lib/python3.5/site-packages/boto/rds'...
Listing './lib/python3.5/site-packages/boto/rds2'...
Listing './lib/python3.5/site-packages/boto/redshift'...
Listing './lib/python3.5/site-packages/boto/roboto'...
Listing './lib/python3.5/site-packages/boto/route53'...
Listing './lib/python3.5/site-packages/boto/route53/domains'...
Listing './lib/python3.5/site-packages/boto/s3'...
Listing './lib/python3.5/site-packages/boto/sdb'...
Listing './lib/python3.5/site-packages/boto/sdb/db'...
Listing './lib/python3.5/site-packages/boto/sdb/db/manager'...
Listing './lib/python3.5/site-packages/boto/services'...
Listing './lib/python3.5/site-packages/boto/ses'...
Listing './lib/python3.5/site-packages/boto/sns'...
Listing './lib/python3.5/site-packages/boto/sqs'...
Listing './lib/python3.5/site-packages/boto/sts'...
Listing './lib/python3.5/site-packages/boto/support'...
Listing './lib/python3.5/site-packages/boto/swf'...
Listing './lib/python3.5/site-packages/boto/vendored'...
Listing './lib/python3.5/site-packages/boto/vendored/regions'...
Listing './lib/python3.5/site-packages/boto/vpc'...
Listing './lib/python3.5/site-packages/boto-2.48.0.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pathtools'...
Listing './lib/python3.5/site-packages/pathtools-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/watchdog'...
Listing './lib/python3.5/site-packages/watchdog/observers'...
Listing './lib/python3.5/site-packages/watchdog/tricks'...
Listing './lib/python3.5/site-packages/watchdog/utils'...
Listing './lib/python3.5/site-packages/watchdog-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './lib/python3.5/site-packages/zdesk'...
Listing './lib/python3.5/site-packages/zdesk-2.6.0.egg-info'...
Listing './lib/python3.5/site-packages/zendesk'...
Compiling './lib/python3.5/site-packages/zendesk/create_new_post_shell.py'...
***   File "./lib/python3.5/site-packages/zendesk/create_new_post_shell.py", line 67
    print "The article is located at " + article
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zendesk/deploy.py'...
***   File "./lib/python3.5/site-packages/zendesk/deploy.py", line 61
    print "Article " + article_id + " has been updated at: " + zendesk_url + "/" + article_id
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zendesk/scripts'...
Compiling './lib/python3.5/site-packages/zendesk/scripts/cloudfront_images.py'...
***   File "./lib/python3.5/site-packages/zendesk/scripts/cloudfront_images.py", line 57
    print 'Updating ' + img_path + ' in Amazon S3 bucket ' + bucket_name
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zendesk/track_changes.py'...
***   File "./lib/python3.5/site-packages/zendesk/track_changes.py", line 48
    print "Created " + out_path
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zendesk_help_center_backer-0.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
